Fix responsive on mobile

--- a/app/login/Login.module.css
+++ b/app/login/Login.module.css
@@ -1,37 +1,74 @@
 .wrapper {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: 549px;
-    background-size: cover;
-    background-image: url(https://images.unsplash.com/photo-1484242857719-4b9144542727?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1280&q=80);
-  }
-  
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 549px;
+  background-size: cover;
+  background-image: url(https://images.unsplash.com/photo-1484242857719-4b9144542727?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8MHx8fGVufDB8fHx8&auto=format&fit=crop&w=1280&q=80);
+}
+
+.cardContainer {
+  display: flex;
+  position: relative;
+  width: 900px;
+  transition: transform 0.6s ease-in-out;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  width: 90%;
+  transition: transform 0.6s ease-in-out;
+  z-index: 2;
+}
+
+.registerCard {
+  transform: translateX(-100%);
+  z-index: 1;
+}
+
+.slideRight .card {
+  transform: translateX(100%);
+}
+
+.slideRight .registerCard {
+  transform: translateX(0);
+  z-index: 2;
+}
+
+@media (max-width: 768px) {
   .cardContainer {
-    display: flex;
     position: relative;
-    width: 900px;
-    transition: transform 0.6s ease-in-out;
+    width: 100%;
+    height: 100%;
   }
-  
-  .card {
-    width: 50%;
-    transition: transform 0.6s ease-in-out;
-    z-index: 2;
-  }
-  
+
+  .card,
   .registerCard {
-    transform: translateX(-100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: opacity 0.6s ease-in-out, z-index 0.6s;
     z-index: 1;
+    opacity: 0;
   }
-  
-  .slideRight .card {
-    transform: translateX(100%);
-  }
-  
-  .slideRight .registerCard {
-    transform: translateX(0);
+
+  .cardContainer .card {
     z-index: 2;
+    opacity: 1;
   }
-  
+
+  .slideRight .card {
+    z-index: 1;
+    opacity: 0;
+  }
+
+  .slideRight .registerCard {
+    z-index: 2;
+    opacity: 1;
+  }
+}
